Fixed icons vertical align

--- a/share/spice/hearthstone/hearthstone.css
+++ b/share/spice/hearthstone/hearthstone.css
@@ -1,3 +1,4 @@
 .zci--hearthstone--icon {
-    vertical-align: middle;
+    position: relative;
+    top: 3px;
 }
